# NeonLauncher-Qt

./: BUILD.md  CMakeLists.txt  Database.cpp  Database.h  GameCard.qml  Main.qml  README.md  Sidebar.qml  SteamScanner.cpp  TROUBLESHOOTING.md  srcmain.cpp
.github/workflows/: c-cpp.yml  cmake-multi-platform.yml
src/: main.cpp
src/core/: Database.cpp  Database.h  GameModel.cpp  GameModel.h  SaveBackupManager.cpp  SaveBackupManager.h  SteamScanner.cpp  SteamScanner.h  TranslationManager.cpp  TranslationManager.h
src/ui/qml/: GameCard.qml  Main.qml  SaveBackupView.qml  Sidebar.qml  SidebarButton.qml
